--- a/templates/default/sensu.xml.erb
+++ b/templates/default/sensu.xml.erb
@@ -6,14 +6,14 @@
   <id><%= @service %></id>
   <name><%= @name %></name>
   <description>This service runs a <%= @name %></description>
-  <executable>C:\opt\sensu\embedded\bin\ruby</executable>
-  <argument>C:\opt\sensu\embedded\bin\<%= @service %></argument>
+  <executable>C:/opt/sensu/embedded/bin/ruby</executable>
+  <argument>C:/opt/sensu/embedded/bin/<%= @service %></argument>
   <argument>-c</argument>
-  <argument><%= node.sensu-manage.windows.directory %>\config.json</argument>
+  <argument><%= @sensu_dir %>/config.json</argument>
   <argument>-d</argument>
-  <argument><%= node.sensu-manage.windows.directory %>\conf.d</argument>
+  <argument><%= @sensu_dir %>/conf.d</argument>
   <argument>-e</argument>
-  <argument><%= node.sensu-manage.windows.directory %>\extensions</argument>
+  <argument><%= @sensu_dir %>/extensions</argument>
   <argument>-l</argument>
-  <argument><%= node.sensu-manage.windows.log_directory %>\<%= @service %>.log</argument>
+  <argument><%= @sensu_log_dir %>/<%= @service %>.log</argument>
 </service>
